data/derived/fa15/progs/unify/prog3270.ml.out
Characters 47-51:
  |VarX ->"%s" s;;
          ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
